--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,22 @@
 
+databases:
+  - name: life-tracker
+    databaseName: life-tracker
+    user: life-tracker
+
 services:
     - type: web
-      name: rails
+      name: life-tracker
       env: ruby
       buildCommand: "./bin/render-build.sh"
-      startCommand: bundle exec rails s
+      startCommand: "bundle exec puma -C config/puma.rb"
       envVars:
-      - key: RAILS_MASTER_KEY
-        sync: false
-      - key: DATABASE_URL
-        fromDatabase:
-          name: postgres
-          property: connectionString
+          - key: DATABASE_URL
+            fromDatabase:
+              name: life-tracker
+              property: connectionString
+          - key: RAILS_MASTER_KEY
+            sync: false
     - type: redis
       name: redis
       ipAllowList: []
