--- a/render.yaml
+++ b/render.yaml
@@ -1,19 +1,19 @@
 
 databases:
-  - name: life-tracker
-    databaseName: life-tracker
-    user: life-tracker
+  - name: lifeTracker
+    databaseName: lifeTracker
+    user: lifeTracker
 
 services:
     - type: web
-      name: life-tracker
+      name: lifeTracker
       env: ruby
       buildCommand: "./bin/render-build.sh"
       startCommand: "bundle exec puma -C config/puma.rb"
       envVars:
           - key: DATABASE_URL
             fromDatabase:
-              name: life-tracker
+              name: lifeTracker
               property: connectionString
           - key: RAILS_MASTER_KEY
             sync: false
