Render corrected setup

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
   database: magia_production
   username: magia
   password: <%= ENV["MAGIA_DATABASE_PASSWORD"] %>
