--- a/render.yaml
+++ b/render.yaml
@@ -1,19 +1,24 @@
 
+databases:
+  - name: magicSd
+    databaseName: magicSd
+    user: magicSd
+
 services:
-    - type: web
-      name: lifeTracker
-      env: ruby
-      buildCommand: "./bin/render-build.sh"
-      startCommand: "bundle exec puma -C config/puma.rb"
-      envVars:
-          - key: DATABASE_URL
-            fromDatabase:
-              name: lifeTracker
-              property: connectionString
-          - key: RAILS_MASTER_KEY
-            sync: false
-    - type: redis
-      name: redis
-      ipAllowList: []
-      plan: free
-      maxmemoryPolicy: noeviction
+  - type: web
+    name: magicSd
+    env: ruby
+    buildCommand: "./bin/render-build.sh"
+    startCommand: "bundle exec puma -C config/puma.rb"
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: magicSd
+          property: connectionString
+      - key: RAILS_MASTER_KEY
+        sync: false
+  - type: redis
+    name: redis
+    ipAllowList: [ ]
+    plan: free
+    maxmemoryPolicy: noeviction
